UCLALIB-264: Fixed desktop spacing issues on location detail page

--- a/www/sites/all/themes/uclalib_omega/css/uclalib-omega.normalize.css
+++ b/www/sites/all/themes/uclalib_omega/css/uclalib-omega.normalize.css
@@ -226,19 +226,12 @@ th {
   padding: 0;
 }
 
-html {
+*, *:before, *:after {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-embed,
-img,
-object,
-video {
+img, video {
   max-width: 100%;
   height: auto;
 }
